@@ -70,7 +70,6 @@ class Twig_Environment
      *
      *  * autoescape: Whether to enable auto-escaping (default to html):
      *                  * false: disable auto-escaping
-     *                  * true: equivalent to html
      *                  * html, js: set the autoescaping to one of the supported strategies
      *                  * PHP callback: a PHP callback that returns an escaping strategy based on the template "filename"
      *
