@@ -1,5 +1,7 @@
 * 2.0.0 (201X-XX-XX)
 
+ * removed `true` as an equivalent to `html` for the auto-escaping strategy
+ * removed pre-1.8 autoescape tag syntax
  * dropped support for PHP 5.2, 5.3, and 5.4
  * removed the ability to register a global variable after the runtime or the extensions have been initialized
  * improved the performance of the filesystem loader
